<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/email_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/card_padding">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:background="@android:color/holo_orange_dark"
            android:src="@android:drawable/toast_frame"
            android:contentDescription="@string/sample_description" />

        <TextView
            android:id="@+id/sender"
            android:layout_marginLeft="@dimen/card_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/avatar"
            android:layout_toLeftOf="@id/date"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sample_sender" />
        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sender"
            android:layout_alignLeft="@+id/sender"
            android:layout_toLeftOf="@id/star"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sample_title"/>
        <TextView
            android:id="@+id/brief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subject"
            android:layout_alignLeft="@+id/subject"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_toLeftOf="@id/star"
            android:text="@string/sample_brief"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:maxLines="1"
            android:text="@string/sample_date"/>
        <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/subject"
            android:src="@android:drawable/star_off" />

    </RelativeLayout>


</android.support.v7.widget.CardView>